--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./public/docuchat-favicon.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+      name="description"
+      content="DocuChat AI - Upload documents and chat with AI about their content"
+    />
+    <meta name="author" content="DocuChat AI" />
+    <meta property="og:title" content="DocuChat AI" />
+    <meta
+      property="og:description"
+      content="Intelligent document conversations powered by AI"
+    />
+    <meta property="og:type" content="website" />
+    <title>DocuChat AI</title>
   </head>
   <body>
     <div id="root"></div>
